# clear-lang

./: CMakeLists.txt  README.md  main.cpp
example/: test1.clr
include/: ASTNode.hpp  Error.hpp  Lexer.hpp  Parser.hpp  Token.hpp  Type.hpp
